--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "contextily>=1.7.0",
     "cmcrameri>=1.9",
+    "xgboost>=3.1.2",
+    "torch>=2.9.1",
+    "torchvision>=0.24.1",
 ]
