--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "musa-650-spring-2026"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11,<3.12"  # Add this line
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "bokeh>=3.8.1",
     "bottleneck>=1.6.0",
