small changes before midterm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
     "pre-commit>=4.1.0",
     "marimo>=0.19.9",
     "shap>=0.50.0",
+    "geemap>=0.37.1",
+    "ee>=0.2",
 ]
 
 [tool.black]
